samples/_failures_safe/1761787744_d692d7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_993ef2cd.c: In function ‘main’:
./samples/SAFE/__tmp_993ef2cd.c:135:5: error: expected declaration or statement at end of input
  135 |     for (int i = 0; i < display_count; i++) {
      |     ^~~
./samples/SAFE/__tmp_993ef2cd.c:135:5: error: expected declaration or statement at end of input
